--- a/frameworks/zh_TW.lproj/Action.plist
+++ b/frameworks/zh_TW.lproj/Action.plist
@@ -11,7 +11,7 @@
 		<key>##cast2</key>
 		<string>馬特</string>
 		<key>##description</key>
-		<string>一次扣人心弦的驚險旅行，讓您緊張得快坐不住了。最適合用於製作使人激動興奮的度假視頻。</string>
+		<string>一次扣人心弦的驚險旅行，讓您緊張得快坐不住了。最適合用於製作令人激動興奮的度假影片。</string>
 		<key>##movieName</key>
 		<string>終點^b線</string>
 		<key>##pronoun0</key>
