--- a/frameworks/zh_TW.lproj/Adventure.plist
+++ b/frameworks/zh_TW.lproj/Adventure.plist
@@ -9,7 +9,7 @@
 		<key>##date</key>
 		<string>^y 年^b 8 月 29 日</string>
 		<key>##description</key>
-		<string>成為環遊世界大冒險的動作英雄！很合用於製作旅行視頻或充滿打鬥的故事視頻。</string>
+		<string>成為環遊世界大冒險的動作英雄！適合用於製作旅行影片或充滿打鬥的故事影片。</string>
 		<key>##movieName</key>
 		<string>小傑^b與^b命運山峰</string>
 		<key>##script0</key>
